clang/test/BSC/Negative/Ownership/RuleCheck/func-param/func-param.cbs
// %RUN: %clang_cc1 -verify %s

void param(int * owned x) {
	int * owned a = x;
} // expected-error {{memory leak of value: `a`}}
